removed common module, refactored movie-info-service